# docs/swagger.json
@@ -159,6 +159,42 @@
                         }
                     }
                 }
+            },
+            "delete": {
+                "description": "刪掉訂單",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Order"
+                ],
+                "summary": "刪掉訂單",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "訂單ID",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/shuming.UserResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/shuming.ErrorResponse"
+                        }
+                    }
+                }
             }
         },
         "/shumingyu/product": {
@@ -365,7 +401,7 @@
                 }
             },
             "delete": {
-                "description": "刪掉訂單",
+                "description": "刪掉商品資料",
                 "consumes": [
                     "application/json"
                 ],
@@ -373,13 +409,13 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Order"
+                    "Product"
                 ],
-                "summary": "刪掉訂單",
+                "summary": "刪掉商品資料",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "訂單ID",
+                        "description": "商品ID",
                         "name": "id",
                         "in": "query",
                         "required": true
